lab1/Test/L1-A-5-97.output
Error Type B at Line 1
Error Type B at Line 2
Error Type A at Line 8
Error Type A at Line 9
Error Type A at Line 10
Error Type B at Line 14
Error Type B at Line 20
