lab1/Test/L1-A-5-97.cmm
int MnZXkFoB2AN5mE3penyZ ( {
  if ! ! - - ! fofY38dLwjWhdroXrx4 = ! - 971919046.1680376861 
    = ! yc + vqQIhRtUW7RMQ5sUyfn - THbBLp + Z0TqSeDYEA_ 
    + f08bmQLeqX6ZekH3bWN + h2LspT_3rVg4xTet3woi + a9yRK 
    - J7oiV - CQJ5pQONk - CSutg8QNG5Maaj >= gAtBzMhTxGvLj 
    >= nPnQSFQ_OFFzRzHIqbGg != kSVo3k33H80H3h47p8tT != 
    irduc < HtyejgxEvF != KWg1ZLOzozQaxg != V2Svxriob6 
    < LB8Q2 )   if ( - ov5 '= RQCATtIwlHK_3XZx )   wNl8Q 
    @;
else   BE9l1M71 ~;


}
int puq [ 529097641 ] [ 193524352 ] [ ] [ 866989732 
  ] , XYA9yhZl , tJ3K 


;
struct K {
  struct yafWIwLS__s2OP6lXE }GKkIdKH8iffC [ 1851112308 
  ] [ 504590530 ] = - ! - UwixtFJ_viqIr = ! pZEGC = 
  lJL ;
}uoaBUOIDiKmYKq9z [ 159730219 ] 
;
